--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@diia-inhouse/utils",
+    "name": "@kant2002-diia-inhouse/utils",
     "version": "2.36.1",
     "description": "Generic utils",
     "main": "dist/index.js",
@@ -37,17 +37,17 @@
         "moment": "2.30.1"
     },
     "peerDependencies": {
-        "@diia-inhouse/errors": ">=1.4.1",
-        "@diia-inhouse/types": ">=4.4.1",
-        "@diia-inhouse/validators": ">=1.5.0"
+        "@kant2002-diia-inhouse/errors": ">=1.4.1",
+        "@kant2002-diia-inhouse/types": ">=4.4.1",
+        "@kant2002-diia-inhouse/validators": ">=1.5.0"
     },
     "devDependencies": {
-        "@diia-inhouse/configs": "^1.26.3",
-        "@diia-inhouse/errors": "^1.6.1",
-        "@diia-inhouse/eslint-config": "^3.4.0",
-        "@diia-inhouse/test": "^5.1.2",
-        "@diia-inhouse/types": "^5.1.0",
-        "@diia-inhouse/validators": "^1.12.1",
+        "@kant2002-diia-inhouse/configs": "^1.26.3",
+        "@kant2002-diia-inhouse/errors": "^1.6.1",
+        "@kant2002-diia-inhouse/eslint-config": "^3.4.0",
+        "@kant2002-diia-inhouse/test": "^5.1.2",
+        "@kant2002-diia-inhouse/types": "^5.1.0",
+        "@kant2002-diia-inhouse/validators": "^1.12.1",
         "@types/fast-levenshtein": "0.0.4",
         "@types/lodash": "4.14.202",
         "@types/node": "20.11.17",
@@ -58,16 +58,16 @@
         "rimraf": "5.0.5"
     },
     "release": {
-        "extends": "@diia-inhouse/configs/dist/semantic-release/package",
+        "extends": "@kant2002-diia-inhouse/configs/dist/semantic-release/package",
         "branches": [
             "main"
         ]
     },
     "commitlint": {
-        "extends": "@diia-inhouse/configs/dist/commitlint"
+        "extends": "@kant2002-diia-inhouse/configs/dist/commitlint"
     },
     "eslintConfig": {
-        "extends": "@diia-inhouse/eslint-config",
+        "extends": "@kant2002-diia-inhouse/eslint-config",
         "rules": {
             "@typescript-eslint/no-explicit-any": "warn"
         },
@@ -86,9 +86,9 @@
         ]
     },
     "jest": {
-        "preset": "@diia-inhouse/configs/dist/jest"
+        "preset": "@kant2002-diia-inhouse/configs/dist/jest"
     },
-    "prettier": "@diia-inhouse/eslint-config/prettier",
+    "prettier": "@kant2002-diia-inhouse/eslint-config/prettier",
     "madge": {
         "tsConfig": "./tsconfig.json"
     }
